[package]
name = "pi2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
itertools = "0.12.1"
log = { version = "0.4.21", features = ["kv"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.33"
thiserror = "1.0.58"
